# example_package

./: LICENSE  README.md  pyproject.toml
mypackage/: __init__.py  conftest.py  module.py
mypackage/tests/: test_basic.py
