[project]
name = "mypackage"
description = "An example flat layout python package"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
authors = [{ name = "My Name"}]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "setuptools_scm",
  "numpy >=2.0.0",
]

license-files = ["LICENSE"]


[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx",
    "tomli",
]
tests = [
    "pytest",
    "pytest-doctestplus",
]


[project.urls]
repository = "https://github.com/SASP2025/example_package"


[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[tomli]>=6.2",
  "wheel",
  "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
include = [
"mypackage*"
]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm
version_file = "mypackage/_version.py"


[tool.pytest.ini_options]
testpaths = [
  "mypackage",
  "docs",
]
doctest_plus = "enabled"
doctest_rst = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"


[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".git",
    ".github",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "docs",
]

[tool.ruff.lint]
preview = true
select = [ 'F', 'E101', 'E111', 'E112', 'E113', 'E115', 'E117',
           'E204', 'E223', 'E224', 'E242', 'E265', 'E273', 'E274', 'E275',
           'E301', 'E302', 'E305', 'E306', 'E401', 'E501', 'E502', 'E703',
           'E711', 'E713', 'E714', 'E72', 'E74',
           'W19', 'W29', 'W39', 'W605',
           'N804', 'N805', 'N807',
           'D206', 'D300', 'D301',
           'UP010', 'UP011', 'UP012', 'UP013', 'UP014', 'UP017', 'UP018', 'UP019',
           'UP02', 'UP030', 'UP031', 'UP033', 'UP034', 'UP035', 'UP036',
           'UP037', 'UP039', 'UP04',
           'PLE0100', 'PLE0101', 'PLE0116',
           'NPY',
           'RUF018',
           'E301', 'E302', 'E306', 'W505', 'D200', 'D212', 'RUF021' ]

# see also https://packaging.python.org/en/latest/guides/writing-pyproject-toml/